# cancel-capture

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  check.sh  docker-compose.yml  pyproject.toml  streamlit.sh
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: architecture.md  experiments.md  implementation.md  ingestion.md  persistence.md  review.md  runbook.md
scripts/: backfill_visual_embeddings.py
src/cancel_capture/: cli.py  config.py  container.py  errors.py  models.py  narrative_models.py  ports.py  progress.py  provider_registry.py  streamlit_app.py  wait_lines.py
src/cancel_capture/adapters/: filesystem.py  image.py  markdown_narratives.py  metadata.py  openai_provider.py  sqlite_catalog.py  telegram_bot.py  telegram_photo.py  telethon_history.py  visual_embedding.py
src/cancel_capture/application/: __init__.py  cluster_theme.py  clustering.py  ingest.py  narrative_experiment.py  narrative_selection.py  review.py  search.py  visual_embeddings.py
src/cancel_capture/prompts/: __init__.py  archival.py  cluster_theme.py  narrative.py  news.py  vision.py
tests/: fakes.py  test_assets_and_images.py  test_clustering.py  test_config_and_callbacks.py  test_history_importer.py  test_ingestion_and_search.py  test_metadata.py  test_models.py  test_narrative_experiment.py  test_narrative_prompts.py  test_narrative_selection.py  test_narrative_store.py  test_openai_narrative.py  test_openai_provider.py  test_progress.py  test_provider_registry.py  test_review.py  test_streamlit_smoke.py  test_telegram_adapter.py  test_wait_lines.py
(+7 files in other folders)
