[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "cancel-capture"
version = "0.1.0"
description = "Archive, describe, search, review, and publish prohibition signs from Telegram photos."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "MIT" }
authors = [{ name = "Vova" }]
dependencies = [
  "numpy>=2.0,<3",
  "openai>=2.0,<3",
  "pillow>=11.0,<13",
  "pillow-heif>=1.0,<2",
  "pydantic>=2.10,<3",
  "python-dotenv>=1.1,<2",
  "python-telegram-bot>=22.0,<23",
  "streamlit>=1.45,<2",
  "telethon>=1.40,<2",
]

[project.optional-dependencies]
dev = [
  "pyright>=1.1.400",
  "pytest>=8.4,<10",
  "pytest-asyncio>=1.0,<2",
  "ruff>=0.12,<1",
  "types-Pillow>=10.2",
]

[project.scripts]
cancel-capture = "cancel_capture.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cancel_capture"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM", "RUF", "PERF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "RUF001"]
"src/cancel_capture/adapters/openai_provider.py" = ["E501"]
"src/cancel_capture/adapters/telegram_bot.py" = ["RUF001"]
"src/cancel_capture/application/ingest.py" = ["RUF001"]
"src/cancel_capture/streamlit_app.py" = ["RUF001"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]
